fixed squished imgs

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -52,7 +52,7 @@ body{
 
 .spaceship {
     height: 80%;
-    width: 52%;
+    width: 45%;
     transform: rotate(10deg); 
 }
 
